# pair-tone

./: .env.example  .gitignore  Makefile  README.md  annotation_app_README.md  app.py  pyproject.toml
annotation_app/: __init__.py  merge_jsonl.py
annotation_app/polly/: __init__.py  client.py  ssml.py
annotation_app/schemas/: annotation.py  manifest.py
annotation_app/storage/: revision.py  s3.py
annotation_app/ui/: __init__.py  pair_selection.py  preview.py  prosody_editor.py  save_submit.py  validity_check.py
annotation_app/validation/: __init__.py  boundary.py  mora.py
data/retry01/: pair_manifest.jsonl
data/sample/: pair_manifest.jsonl
scripts/: export_annotated_manifest.py  upload_manifest.py
tests/: test_boundary.py  test_export_annotated_manifest.py  test_merge_jsonl.py  test_mora.py  test_prosody_editor.py  test_ssml.py
